# duplicate_filechecker

./: .gitignore  AGENTS.md  main.py  pyproject.toml
.github/prompts/: kiro-spec-design.prompt.md  kiro-spec-impl.prompt.md  kiro-spec-init.prompt.md  kiro-spec-requirements.prompt.md  kiro-spec-status.prompt.md  kiro-spec-tasks.prompt.md  kiro-steering-custom.prompt.md  kiro-steering.prompt.md  kiro-validate-design.prompt.md  kiro-validate-gap.prompt.md  kiro-validate-impl.prompt.md
.kiro/specs/duplicate-file-checker/: design.md  requirements.md  research.md  spec.json  tasks.md  validation.md
.kiro/specs/maintenance-subcommand/: design.md  requirements.md  research.md  spec.json  tasks.md
.kiro/steering/: product.md  structure.md  tech.md
duplicate_filechecker/: __main__.py  cli.py  database.py  hasher.py  logger.py  maintenance.py  merger.py  scanner.py
tests/: conftest.py  test_cli.py  test_database.py  test_entrypoint.py  test_hasher.py  test_logger_rotation.py  test_maintenance.py  test_merger.py  test_scanner.py  test_scanner_recursive.py
