[project]
name = "duplicate-filechecker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "typer>=0.24.1",
]

[dependency-groups]
dev = [
    "mypy>=1.20.0",
    "ruff>=0.15.10",
]

[tool.ruff]
line-length = 120
target-version = "py314"
exclude = ["migrations/", "tests/"]
select = ["E", "W", "F"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["duplicate_filechecker"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
ignore_missing_imports = true
